nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /teri
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  backend:
    serviceName: my-nginx-nginx-ingress-default-backend
    servicePort: 80
  rules:
  - host: teriterimasumasu.kawaii
    http:
      paths:
      - path: /teri
        backend:
          serviceName: prisma
          servicePort: 4466
